--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<title>Aviation Dinosaurs</title>
+	<title>Aviation Dinosaurs – Honoring the Pioneers of VIP Large Aircraft</title>
+	
+	<meta name="description"
+		content="The Aviation Dinosaur Club, founded by Jerry Allan King-Echevarria, honors early pioneers of the VIP large aircraft segment – from pilots and maintenance crews to cabin attendants and outfitters – preserving their stories for future aviators.">
+	
+	<meta name="keywords"
+		content="Aviation Dinosaur Club, Jerry Allan King-Echevarria, VIP aircraft, aviation history, large aircraft pioneers, aircraft maintenance, pilots, cabin crew, aircraft outfitting, aviation heritage">
+	
+	<meta property="og:title" content="Aviation Dinosaurs – Honoring the Pioneers of VIP Large Aircraft">
+	<meta property="og:description"
+		content="Founded by Jerry Allan King-Echevarria, the Aviation Dinosaur Club preserves the stories and legacies of those who served VIP large aircraft around the world.">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://yourdomain.com/aviation-dinosaurs">
+	<meta property="og:image" content="https://yourdomain.com/images/aviation-dinosaurs.jpg">
+	
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Aviation Dinosaurs – Honoring the Pioneers of VIP Large Aircraft">
+	<meta name="twitter:description"
+		content="Preserving the stories and legacies of VIP large aircraft pioneers for future aviators.">
+	<meta name="twitter:image" content="https://yourdomain.com/images/aviation-dinosaurs.jpg">
 
 	<link rel="dns-prefetch" href="http://fonts.googleapis.com/">
 
