one more here 4u

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<footer id="colophon" class="site-footer default-max-width" role="contentinfo" aria-label="Footer">
 
 			<div class="site-info">
-				<a class="site-name" href="http://www.aviationdinosaurs.com/" rel="home">Aviation
+				<a id="site-name" class="site-name" href="http://www.aviationdinosaurs.com/" rel="home">Aviation
 					Dinosaurs</a>
 			</div><!-- .site-info -->
 		</footer><!-- #colophon -->
