--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 	<title>Aviation Dinosaurs – Honoring the Pioneers of VIP Large Aircraft</title>
 	
 	<meta name="description"
-		content="The Aviation Dinosaur Club, founded by Jerry Allan King-Echevarria, honors early pioneers of the VIP large aircraft segment – from pilots and maintenance crews to cabin attendants and outfitters – preserving their stories for future aviators.">
+		content="The Aviation Dinosaur Club honors early pioneers of VIP large aircraft - pilots, maintenance crews, cabin attendants and outfitters - preserving their stories for future aviators.">
 	
-	<meta name="keywords"
-		content="Aviation Dinosaur Club, Jerry Allan King-Echevarria, VIP aircraft, aviation history, large aircraft pioneers, aircraft maintenance, pilots, cabin crew, aircraft outfitting, aviation heritage">
+	<link rel="canonical" href="https://aviationdinosaurs.com/">
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-45TBHB42X6"></script>
@@ -29,16 +28,62 @@
 	<meta property="og:description"
 		content="Founded by Jerry Allan King-Echevarria, the Aviation Dinosaur Club preserves the stories and legacies of those who served VIP large aircraft around the world.">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://yourdomain.com/aviation-dinosaurs">
-	<meta property="og:image" content="https://yourdomain.com/images/aviation-dinosaurs.jpg">
+	<meta property="og:url" content="https://aviationdinosaurs.com/">
+	<meta property="og:image" content="https://aviationdinosaurs.com/images/aviation-dinosaurs.jpg">
 	
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Aviation Dinosaurs – Honoring the Pioneers of VIP Large Aircraft">
 	<meta name="twitter:description"
 		content="Preserving the stories and legacies of VIP large aircraft pioneers for future aviators.">
-	<meta name="twitter:image" content="https://yourdomain.com/images/aviation-dinosaurs.jpg">
+	<meta name="twitter:image" content="https://aviationdinosaurs.com/images/aviation-dinosaurs.jpg">
 
 	<link rel="dns-prefetch" href="http://fonts.googleapis.com/">
+
+	<!-- Structured Data Schema -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "Organization",
+		"name": "Aviation Dinosaur Club",
+		"description": "An organization that honors early pioneers of VIP large aircraft segment, preserving their stories and legacies for future aviators.",
+		"founder": {
+			"@type": "Person",
+			"name": "Jerry Allan King-Echevarria",
+			"jobTitle": "Founder and Chairman",
+			"worksFor": {
+				"@type": "Organization",
+				"name": "King Aerospace Companies"
+			}
+		},
+		"url": "https://aviationdinosaurs.com/",
+		"logo": "https://aviationdinosaurs.com/img/color-golden-Picture-no-background-2.png"
+	}
+	</script>
+
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "WebPage",
+		"name": "Aviation Dinosaurs - Honoring the Pioneers of VIP Large Aircraft",
+		"description": "The Aviation Dinosaur Club honors early pioneers of VIP large aircraft - pilots, maintenance crews, cabin attendants and outfitters - preserving their stories for future aviators.",
+		"url": "https://aviationdinosaurs.com/",
+		"mainEntity": {
+			"@type": "Article",
+			"headline": "The Aviation Dinosaur Club",
+			"description": "The Aviation Dinosaur Club was created by Jerry Allan King-Echevarria to highlight the lessons and legacies of early pioneers of the VIP large aircraft segment.",
+			"author": {
+				"@type": "Person",
+				"name": "Jerry Allan King-Echevarria"
+			},
+			"publisher": {
+				"@type": "Organization",
+				"name": "Aviation Dinosaur Club"
+			},
+			"datePublished": "2024",
+			"image": "https://aviationdinosaurs.com/img/Doug-Beckham-and-Jerry2.jpg"
+		}
+	}
+	</script>
 
 
 	<link rel="stylesheet" id="wp-block-library-css" href="styles/style.min.css" media="all">
