--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 												width="128" height="128"
 												src="img/color-golden-Picture-no-background-2.png"
 												alt="Aviation Dinosaur Club Logo" class="wp-image-28" style="width:198px;height:auto"
-												itemprop="image">
+												itemprop="image" title="Aviation Dinosaur Club Logo">
 										</figure>
 									</div>
 								</div>
@@ -179,7 +179,7 @@
 										class="wp-image-21" style="width:449px;height:auto"
 										srcset="img/Doug-Beckham-and-Jerry2.jpg 640w, img/Doug-Beckham-and-Jerry2.jpg 300w"
 										sizes="(max-width: 640px) 100vw, 640px"
-										itemprop="image">
+										itemprop="image" title="Jerry Allan King-Echevarria and Doug Beckham">
 								</figure>
 							</div>
 						</div><!-- .entry-content -->
